<resources>
    <string name="app_name">Dylan_10117211_opsc</string>
    <string name="signup">Sign Up</string>
    <string name="lblSignUp">Sign Up</string>
    <string name="login">Log in</string>
    <string name="lblLogin">Log In</string>
    <string name="email">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="start_navigating">Start Navigating</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title">Submit Details</string>
    <string name="messageDialog">Are you sure you want to submit?</string>
    <string name="yess">Yes</string>
    <string name="no">No</string>
    <string name="findDestination">Find Destination</string>
    <string name="viewTrips">View Trips</string>
    <string name="logout">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="access_token">pk.eyJ1Ijoib3BzY3Rhc2syIiwiYSI6ImNsOTRvMXk5OTBhOTI0MGpueWtzeGxtZ3oifQ.V-WLgs8lUpRxxZtwp3pbAw</string>
</resources>